--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Page Title</title>
     </head>
     <body>
-        My Project
+        My Project is really cool!
     </body>
 </html>
