--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
         <title>Page Title</title>
     <style></style></head>
     <body>
-        My Project
+        My Project is really cool!
     
 
 </body></html>
